<resources>

    <string name="app_name">Cashybird</string>
    <string name="flappy_bird">Cashybird</string>
    <string name="support_email">cashifly@gmail.com</string>

    <string name="caution">Make sure you enter the right information as this would be used to process your payments earned through coins.</string>
    <string name="startText">Sign-up to cash out your earned coins by playing game!</string>
    <string name="noInternet">No Internet Connection!</string>
    <string name="noInternet_subText">Turn Back ON!\n Your coins won\'t be saved if not connected to internet.</string>
    <string name="noInternet_withdraw">Turn Back ON! \n Couldn\'t Sync With Cloud Server</string>
    <string name="turn_on">Turn-On</string>
    <string name="it_s_okay">It\'s Okay</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_got_any_account">Already got any account?</string>
    <string name="login">Login</string>
    <string name="score">Score</string>
    <string name="personal_best">Personal Best</string>
    <string name="earned_coins">Earned Coins</string>


    <string name="total_earned_coins">Total Earned Coins:</string>
    <string name="option1"><![CDATA[1000 coins =>]]></string>
    <string name="option1_value" />
    <string name="option2"><![CDATA[3000 coins =>]]></string>
    <string name="option2_value" />
    <string name="option3"><![CDATA[5000 coins =>]]></string>
    <string name="option3_value" />
    <string name="option4"><![CDATA[7000 coins =>]]></string>
    <string name="option4_value" />
    <string name="option5"><![CDATA[10000 coins =>]]></string>
    <string name="option5_value" />
    <string name="enter_coins">Enter Number of Coins to Withdraw</string>
    <string name="withdraw_failed">Please Try again after sometime, with better internet connection</string>
    <string name="withdraw_failed_heading">Oops! Withdraw Request Failed!</string>
    <string name="withdraw_success_heading">Withdraw Request Successful!</string>
    <string name="withdraw_success">The Amount will be credited in your Paypal Account within \n5 Business Days</string>

    <!-- Admob Test IDs -->
    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!--    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->


    <!-- Facebook Test IDs --><![CDATA[

    -->
    ]]>
    <string name="facebook_InterstitialProfileEdit">517638269251606_517746939240739</string>
    <string name="facebook_rewarded_video">IMG_16_9_LINK#517638269251606_517747122574054</string>
    <string name="vungleId">60de9b5f805e2f535cf8a9db</string>
    <string name="please_wait">Please wait</string>
    <string name="mobile_number">Mobile number</string>
    <string name="select_withdraw_option">Select Withdraw Option:</string>
    <string name="back_to_login">Back to Login</string>
    <string name="save">Save</string>
    <string name="game_over">GAME OVER</string>
    <string name="score1">SCORE :</string>

    <string-array name="countries_array">

        <item>Afghanistan</item>
        <item>Åland Islands</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia (Plurinational State of)</item>
        <item>Bonaire, Sint Eustatius and Saba</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Côte d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran (Islamic Republic of)</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea (Democratic People\'s Republic of)</item>
        <item>Korea, Republic of</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Lao People\'s Democratic Republic</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia (Federated States of)</item>
        <item>Moldova, Republic of</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Macedonia</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine, State of</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Réunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Barthélemy</item>
        <item>Saint Helena, Ascension and Tristan da Cunha</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin (French part)</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Republic</item>
        <item>Taiwan, Province of China</item>
        <item>Tajikistan</item>
        <item>Tanzania, United Republic of</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States of America</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela (Bolivarian Republic of)</item>
        <item>Viet Nam</item>
        <item>Virgin Islands (British)</item>
        <item>Virgin Islands (U.S.)</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>

    </string-array>


</resources>

